# LiveSRT

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
assets/: demo.cast
src/livesrt/: aai.py  async_tools.py  cli.py  config_template.py  mic.py  tui.py
src/livesrt/transcribe/: base.py
src/livesrt/transcribe/audio_sources/: mic.py  replay_file.py
src/livesrt/transcribe/transcripters/: __init__.py  aai.py  elevenlabs.py  speechmatics.py
src/livesrt/translate/: __init__.py  base.py  local_llm.py  mock.py  remote_llm.py
tests/: smoke_test.py
tests/transcribe/transcripters/: test_speechmatics.py
tests/translate/: test_conversation_builder.py  test_llm_translator_delete.py  test_llm_translator_pruning.py  test_llm_translator_update.py  test_local_llm_sanitizer.py  test_remote_llm.py
